--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "4.17.13",
     "@types/jest": "27.0.2",
+    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "8.5.8",
     "@types/node": "16.11.31",
     "@types/supertest": "2.0.11",
@@ -40,7 +41,7 @@
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "express-async-errors": "3.1.1",
-    "joi": "17.6.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "8.5.1",
     "mysql2": "2.3.0"
   }
